[gd_scene format=3 uid="uid://c6qdcl0sg2mxy"]

[ext_resource type="Script" uid="uid://bm22v3o2u7lln" path="res://addons/icosa/browser/thumbnail.gd" id="1_8pxhf"]
[ext_resource type="Texture2D" uid="uid://e41wpb7feofn" path="res://addons/icosa/icons/logo/logo_main_pixel.png" id="3_3vp83"]
[ext_resource type="PackedScene" uid="uid://c7yig47a2sqmr" path="res://addons/icosa/misc/loading_icon.tscn" id="3_8pxhf"]
[ext_resource type="Texture2D" uid="uid://dr7qboiqgb52s" path="res://addons/icosa/icons/folder_copy.svg" id="3_mk3ky"]
[ext_resource type="Texture2D" uid="uid://b7qrs5qju2ois" path="res://addons/icosa/icons/download.svg" id="3_yfmvu"]
[ext_resource type="Texture2D" uid="uid://dh8rcfcws5n78" path="res://addons/icosa/icons/cc/cc.svg" id="6_3vp83"]
[ext_resource type="Texture2D" uid="uid://ccq5bibqvbefc" path="res://addons/icosa/icons/trash.svg" id="8_rs5q6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3vp83"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.039981965, 0.039981965, 0.039981965, 0.80784315)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8oa6n"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hjirf"]
bg_color = Color(0.148922, 0.574047, 0.258045, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mk3ky"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x15us"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fkpa0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_28c6v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rs5q6"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g4njl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3vp83"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fmlye"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8pxhf"]

[sub_resource type="Gradient" id="Gradient_j7sax"]
offsets = PackedFloat32Array(0.3, 0.5, 0.7)
colors = PackedColorArray(0.24696359, 0.24696359, 0.24696359, 0, 0.24696359, 0.24696359, 0.24696359, 0.8, 0.24696359, 0.24696359, 0.24696359, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_mk3ky"]
gradient = SubResource("Gradient_j7sax")
width = 32
height = 32
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="Gradient" id="Gradient_x15us"]
offsets = PackedFloat32Array(0.3, 0.5, 0.7)
colors = PackedColorArray(0.6866236, 0.68662363, 0.6866236, 0, 0.6866236, 0.68662363, 0.6866236, 0.8, 0.6866236, 0.68662363, 0.6866236, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fkpa0"]
gradient = SubResource("Gradient_x15us")
width = 32
height = 32
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 0.5)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rs5q6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8wiaa"]

[sub_resource type="FontVariation" id="FontVariation_3qkbe"]

[node name="Thumbnail" type="Button" unique_id=1018163684]
custom_minimum_size = Vector2(300, 300)
offset_right = 256.0
offset_bottom = 300.0
theme_override_styles/normal = SubResource("StyleBoxFlat_3vp83")
disabled = true
script = ExtResource("1_8pxhf")

[node name="Padding" type="MarginContainer" parent="." unique_id=481838584]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="Info" type="VBoxContainer" parent="Padding" unique_id=1788482097]
layout_mode = 2
mouse_filter = 2
alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="Padding/Info" unique_id=434277256]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="PanelContainer" type="PanelContainer" parent="Padding/Info/MarginContainer" unique_id=784473033]
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_8oa6n")

[node name="Thumbnail" type="MarginContainer" parent="Padding/Info/MarginContainer/PanelContainer" unique_id=683986863]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ThumbnailImage" type="TextureRect" parent="Padding/Info/MarginContainer/PanelContainer/Thumbnail" unique_id=542928005]
unique_name_in_owner = true
z_index = 2
z_as_relative = false
clip_contents = true
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
expand_mode = 1

[node name="Preview3D" type="SubViewportContainer" parent="Padding/Info/MarginContainer/PanelContainer" unique_id=846768868]
unique_name_in_owner = true
visible = false
layout_mode = 2
stretch = true

[node name="MissingImage" type="MarginContainer" parent="Padding/Info/MarginContainer/PanelContainer" unique_id=1447379925]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Texture" type="TextureRect" parent="Padding/Info/MarginContainer/PanelContainer/MissingImage" unique_id=418674135]
texture_filter = 1
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_3vp83")
expand_mode = 2
stretch_mode = 5

[node name="RichTextLabel" type="RichTextLabel" parent="Padding/Info/MarginContainer/PanelContainer/MissingImage/Texture" unique_id=967841752]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 16
text = "NO IMAGE"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
horizontal_alignment = 1
vertical_alignment = 2

[node name="Progress" type="HBoxContainer" parent="Padding/Info" unique_id=1264482864]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Padding/Info/Progress" unique_id=2002851808]
layout_mode = 2
size_flags_horizontal = 3

[node name="DownloadProgress" type="ProgressBar" parent="Padding/Info/Progress/VBoxContainer" unique_id=1536173895]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_hjirf")
show_percentage = false

[node name="FilesDownloaded" type="ProgressBar" parent="Padding/Info/Progress/VBoxContainer" unique_id=79763393]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
show_percentage = false

[node name="ProgressLabel" type="Label" parent="Padding/Info/Progress/VBoxContainer/FilesDownloaded" unique_id=1070225166]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
horizontal_alignment = 1

[node name="Details" type="HBoxContainer" parent="Padding/Info" unique_id=1398132690]
layout_mode = 2

[node name="Asset" type="VBoxContainer" parent="Padding/Info/Details" unique_id=437257374]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="AssetName" type="Label" parent="Padding/Info/Details/Asset" unique_id=1250975237]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 3
text = "AssetName"
vertical_alignment = 2
clip_text = true

[node name="AuthorName" type="RichTextLabel" parent="Padding/Info/Details/Asset" unique_id=65229807]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_mk3ky")
theme_override_styles/focus = SubResource("StyleBoxEmpty_x15us")
theme_override_styles/background = SubResource("StyleBoxEmpty_fkpa0")
theme_override_styles/fill = SubResource("StyleBoxEmpty_28c6v")
bbcode_enabled = true
text = "AuthorName"
fit_content = true
scroll_active = false
autowrap_mode = 0
vertical_alignment = 2

[node name="Description" type="RichTextLabel" parent="Padding/Info/Details/Asset" unique_id=282083817]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_rs5q6")
theme_override_styles/focus = SubResource("StyleBoxEmpty_g4njl")
text = "Description"
scroll_active = false
context_menu_enabled = true
vertical_alignment = 2

[node name="Download" type="HBoxContainer" parent="Padding/Info/Details" unique_id=369405685]
layout_mode = 2
theme_override_constants/separation = 6
alignment = 2

[node name="AddToCollection" type="MenuButton" parent="Padding/Info/Details/Download" unique_id=1807025380]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 0
tooltip_text = "Add this asset to a collection."
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxEmpty_3vp83")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_fmlye")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8pxhf")
button_mask = 3
icon = ExtResource("3_mk3ky")
alignment = 0
icon_alignment = 1

[node name="License" type="TextureRect" parent="Padding/Info/Details/Download" unique_id=1334688791]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("6_3vp83")
stretch_mode = 2

[node name="BufferingIcon" parent="Padding/Info/Details/Download" unique_id=1641850117 instance=ExtResource("3_8pxhf")]
visible = false
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
value = 0.0
nine_patch_stretch = true
texture_under = SubResource("GradientTexture2D_mk3ky")
texture_progress = SubResource("GradientTexture2D_fkpa0")
loop_time = 0.795
rotation_speed = 0.105
throbber_size = 32
color = Color(0.6866236, 0.68662363, 0.6866236, 1)

[node name="Download" type="Button" parent="Padding/Info/Details/Download" unique_id=584045350]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 14
theme_override_styles/normal = SubResource("StyleBoxEmpty_3vp83")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_fmlye")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8pxhf")
button_mask = 3
icon = ExtResource("3_yfmvu")
alignment = 0
icon_alignment = 1

[node name="Like" type="Button" parent="Padding/Info/Details/Download" unique_id=1234491771]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_3vp83")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_rs5q6")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8wiaa")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_fmlye")
theme_override_styles/focus = SubResource("StyleBoxEmpty_8pxhf")
text = "♡"
icon_alignment = 1

[node name="DeleteAsset" type="Button" parent="Padding/Info/Details/Download" unique_id=853628930]
unique_name_in_owner = true
visible = false
modulate = Color(1, 0.4857641, 0.4182539, 1)
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 14
theme_override_styles/focus = SubResource("StyleBoxEmpty_8pxhf")
icon = ExtResource("8_rs5q6")
alignment = 0
icon_alignment = 1

[node name="DownloadFinished" type="Label" parent="Padding/Info/Details/Download" unique_id=386021497]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = SubResource("FontVariation_3qkbe")
theme_override_font_sizes/font_size = 18
text = "✔️"
vertical_alignment = 1

[node name="DownloadFailed" type="Label" parent="Padding/Info/Details/Download" unique_id=1671930261]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 0
theme_override_fonts/font = SubResource("FontVariation_3qkbe")
theme_override_font_sizes/font_size = 18
text = "❌"
vertical_alignment = 1

[connection signal="pressed" from="." to="." method="_on_pressed"]
[connection signal="meta_clicked" from="Padding/Info/Details/Asset/AuthorName" to="." method="_on_author_name_meta_clicked"]
[connection signal="pressed" from="Padding/Info/Details/Download/Download" to="." method="_on_download_pressed"]
[connection signal="pressed" from="Padding/Info/Details/Download/Like" to="." method="_on_like_pressed"]
[connection signal="pressed" from="Padding/Info/Details/Download/DeleteAsset" to="." method="_on_delete_asset_pressed"]
